manifest/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  selector:
    app: app
  ports: 
    - name: app
      port: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: registry.srv.deliver.run/test/app
        ports:
        - name: app
          containerPort: 5000
      imagePullSecrets: 
      - name: registrypullsecret
      volumes:
      - name: nginxthroughpass
        configMap:
          name: nginxthroughpass
