manifest/ing.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app.gcp.megaanton.ru
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 5000
